# minotaurus

./: CMakeLists.txt  README  Toolchain-avr.gcc.cmake
afms/: minotaurus.db
librtc/: CMakeLists.txt
librtc/include/: rtc.h
librtc/src/: date.c  ds1337.c
libscheduler/: CMakeLists.txt  INDEXG.HTM  README  getkey.c  libscheduler.h  schedule.c  tov0.c
libtwi/include/: TWI_Master.h  twi.h
libtwi/src/: TWI_Master.c  twi.c
libuart/: CMakeLists.txt  uart.c  uart.lst
shutterc/: CMakeLists.txt  main.c  shutter.c  shutter.h
sun_times/: 09_september.csv  12_december.csv  Readme.txt  april.csv  august.csv  converter.py  february.csv  gnuplot_vis.sh  january.csv  july.csv  june.txt  march.csv  may.csv  november.txt  oktober.txt
